--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 <body>
     <header>
         <div class="MainHeader">
-            
+            <img class="Logo" src="/estilo/Img/Logo.svg">
+            <div class="Centro">
+                <p class="Medio">ABOUT US</p>
+                <p class="Medio">OUR GAMES</p>
+                <p class="Medio">JOIN US</p>
+            </div>
+            <div class="Izquierda">
+                <p>ALGO</p>
+            </div>
         </div>
     </header>
 
