--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="Izquierda">
                 <p>ALGO</p>
-                <h2></h2>
+                <h2>ttt</h2>
             </div>
         </div>
     </header>
