"Corrección Detalles Header"

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
         <div class="MainHeader">
             <img class="Logo" src="/estilo/Img/Logo.svg">
             <div class="Centro">
-                <p class="Medio">ABOUT US</p>
-                <p class="Medio">OUR GAMES</p>
-                <p class="Medio">JOIN US</p>
+                <a href="about us" class="Medio">ABOUT US</a>
+                <a href="our games" class="Medio">OUR GAMES</a>
+                <a href="join us" class="Medio">JOIN US</a>
             </div>
             <div class="Izquierda">
                 <p>ALGO</p>
-                <h2>ttt</h2>
             </div>
         </div>
     </header>
