"Intento de Hacer Logos"

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="/estilo/estilo.css">
     <link rel="stylesheet" href="/estilo/normalize.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xrz3kcc.css">
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/proxima-nova-condensed">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://kit.fontawesome.com/c31ed9d506.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -16,12 +20,32 @@
         <div class="MainHeader">
             <img class="Logo" src="/estilo/Img/Logo.svg">
             <div class="Centro">
-                <a href="about us" class="Medio">ABOUT US</a>
-                <a href="our games" class="Medio">OUR GAMES</a>
-                <a href="join us" class="Medio">JOIN US</a>
+                <strong><a href="about us" class="Medio">ABOUT US</a></strong>
+                <strong>><a href="our games" class="Medio">OUR GAMES</a></strong>
+                <strong><a href="join us" class="Medio">JOIN US</a></strong>
             </div>
             <div class="Izquierda">
-                <p>ALGO</p>
+                <div class="Facebook">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+                <div class="Linkedin">
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div class="Twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+                <div class="YouTube">
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <div class="Instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="TikTok">
+                    <i class="fa-brands fa-tiktok"></i>
+                </div>
+                <div class="Twitch">
+                    <i class="fa-brands fa-twitch"></i>
+                </div>
             </div>
         </div>
     </header>
