"Iconos Encerrados y Centrados"

--- a/index.html
+++ b/index.html
@@ -25,27 +25,13 @@
                 <strong><a href="join us" class="Medio">JOIN US</a></strong>
             </div>
             <div class="Izquierda">
-                <div class="Facebook">
-                    <i class="fa-brands fa-facebook-f"></i>
-                </div>
-                <div class="Linkedin">
-                    <i class="fa-brands fa-linkedin"></i>
-                </div>
-                <div class="Twitter">
-                    <i class="fa-brands fa-twitter"></i>
-                </div>
-                <div class="YouTube">
-                    <i class="fa-brands fa-youtube"></i>
-                </div>
-                <div class="Instagram">
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
-                <div class="TikTok">
-                    <i class="fa-brands fa-tiktok"></i>
-                </div>
-                <div class="Twitch">
-                    <i class="fa-brands fa-twitch"></i>
-                </div>
+                <a href="Facebook" class="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="Linkedin" class="Linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="Twitter" class="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="YouTube" class="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                <a href="Instagram" class="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="TikTok" class="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="Twitch" class="Twitch"><i class="fa-brands fa-twitch"></i></a>
             </div>
         </div>
     </header>
