--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <strong>><a href="our games" class="Medio">OUR GAMES</a></strong>
                 <strong><a href="join us" class="Medio">JOIN US</a></strong>
             </div>
-            <div class="Izquierda">
+            <div class="Derecha">
                 <a href="Facebook" class="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="Linkedin" class="Linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="Twitter" class="Twitter"><i class="fa-brands fa-twitter"></i></a>
@@ -32,6 +32,11 @@
                 <a href="Instagram" class="Instagram"><i class="fa-brands fa-instagram"></i></a>
                 <a href="TikTok" class="TikTok"><i class="fa-brands fa-tiktok"></i></a>
                 <a href="Twitch" class="Twitch"><i class="fa-brands fa-twitch"></i></a>
+                <div class="Idioma">
+                    <strong><a href="PL" class="PL">PL</a></strong>,
+                    <span class="Slash">  /  </span>,
+                    <strong><a href="ENG" class="ENG">ENG</a></strong>
+                </div>
             </div>
         </div>
     </header>
