--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/estilo/estilo.css">
-    <link rel="stylesheet" href="/estilo/normalize.css">
+    <link rel="stylesheet" href="/CPR_CLON-main/estilo/estilo.css">
+    <link rel="stylesheet" href="/CPR_CLON-main/estilo/normalize.css">
     <link rel="stylesheet" href="https://use.typekit.net/xrz3kcc.css">
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/proxima-nova-condensed">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="MainHeader">
-            <img class="Logo" src="/estilo/Img/Logo.svg">
+            <img class="Logo" src="/CPR_CLON-main/estilo/Img/Logo.svg">
             <div class="Centro">
                 <strong><a href="about us" class="Medio">ABOUT US</a></strong>
                 <strong>><a href="our games" class="Medio">OUR GAMES</a></strong>
