--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 
 
     <main>
-
+        <div class="ContenedorFoto">
+            <img class="FotoGrande" src="/estilo/Img/tw3.png">
+            <img class="Logo2" src="/estilo/Img/Logo.svg">
+        </div>
     </main>
 
 
