--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <div class="ContenedorFoto">
             <img class="FotoGrande" src="/estilo/Img/tw3.png">
             <img class="Logo2" src="/estilo/Img/Logo.svg">
+            <p class="PAS">PASSIONATE</p>
+            <p class="CRE">CREATORS OF STORY-DRIVEN</p>
+            <p class="ROL">ROLE-PLAYING GAMES</p>
+            <a href="Flecha" class="Flecha"><i class="fa-duotone fa-circle-chevron-down" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ff0000; --fa-secondary-opacity: 1;"></i></a>
         </div>
     </main>
 
