"Fondo con Imágen Listo"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="PAS">PASSIONATE</p>
             <p class="CRE">CREATORS OF STORY-DRIVEN</p>
             <p class="ROL">ROLE-PLAYING GAMES</p>
-            <a href="Flecha" class="Flecha"><i class="fa-duotone fa-circle-chevron-down" style="--fa-primary-color: #ffffff; --fa-secondary-color: #ff0000; --fa-secondary-opacity: 1;"></i></a>
+            <a href="Flecha" class="Flecha"><i class="fa-solid fa-circle-chevron-down fa-2xl"></i></a>
         </div>
     </main>
 
