--- a/index.html
+++ b/index.html
@@ -52,12 +52,39 @@
             <p class="ROL">ROLE-PLAYING GAMES</p>
             <a href="Flecha" class="Flecha"><i class="fa-solid fa-circle-chevron-down fa-2xl"></i></a>
         </div>
+        <div class="BloqueMain">
+            <div class="Columna1">
+                <div class="DentroImagen">
+                    <img class="Team" src="/estilo/Img/team.png">
+                </div>
+                <div class="Texto">
+                    <h2 class="Negro">WE BREAK RULES</h2>
+                    <h2 class="Rojo">WE MAKE RULES</h2>
+                    <p class="P1">Rebels, dreamers, professionals. Home to over a thousand ambitious individuals. CD PROJEKT RED is a video game development studio focused on storytelling ingenuity, technical innovation, and absolute quality.</p>
+                </div>
+            </div>
+            <div class="Columna2">
+                <div class="DentroImagen">
+                    <img class="Join" src="/estilo/Img/join.png">
+                </div>
+                <div class="Texto">
+                    <h2 class="Negro">ROOM TO CREATE</h2>
+                    <h2 class="Rojo">ROOM TO GROW</h2>
+                    <p class="P2">Wherever you hail from, however old you are, games have defined you and now you want to define others through games. Good. At RED, we speak many languages but share one goal: creating games that stay with you and memories that make hearts beat faster.</p>
+                </div>
+            </div>
+        </div>
+        <div class="BloqueMain2">
+
+        </div>
     </main>
 
 
 
     <footer>
+        <div class="ContenedorFooter">
 
+        </div>
     </footer>
 </body>
 
