--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
             <div class="Columna1">
                 <div class="DentroImagen">
                     <img class="Team" src="/estilo/Img/team.png">
+                    <p class="MEET">MEET US</p>
+                    <a href="Boton" class="Boton1"><strong>OUR TEAMS</strong></a>
+                    <a href="Games" class="Boton2"><strong>OUR GAMES</strong></a>
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro">WE BREAK RULES</h2>
-                    <h2 class="Rojo">WE MAKE RULES</h2>
+                    <h2 class="Negro">WE BREAK RULES <p style="color: red;">WE MAKE RULES</p></h2>
                     <p class="P1">Rebels, dreamers, professionals. Home to over a thousand ambitious individuals. CD PROJEKT RED is a video game development studio focused on storytelling ingenuity, technical innovation, and absolute quality.</p>
                 </div>
             </div>
@@ -68,14 +70,18 @@
                     <img class="Join" src="/estilo/Img/join.png">
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro">ROOM TO CREATE</h2>
-                    <h2 class="Rojo">ROOM TO GROW</h2>
+                    <h2 class="Negro2">ROOM TO CREATE <p style="color: red;">ROOM TO GROW</h2></p>
                     <p class="P2">Wherever you hail from, however old you are, games have defined you and now you want to define others through games. Good. At RED, we speak many languages but share one goal: creating games that stay with you and memories that make hearts beat faster.</p>
                 </div>
             </div>
         </div>
         <div class="BloqueMain2">
-
+            <div class="Col1">
+                <p class="STU">STUDIO LOCATIONS</p>
+            </div>
+            <div class="Col2">
+                <p class="CON">CONTACT</p>
+            </div>
         </div>
     </main>
 
