--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="DentroImagen">
                     <img class="Team" src="/estilo/Img/team.png">
                     <p class="MEET">MEET US</p>
-                    <a href="Boton" class="Boton1"><strong>OUR TEAMS</strong></a>
-                    <a href="Games" class="Boton2"><strong>OUR GAMES</strong></a>
+                    <button class="Boton1"><strong><p class="BotonA" style="color: white;">OUR TEAMS</p></strong></button>
+                    <button class="Boton2"><strong><p class="BotonB" style="color: white;">OUR GAMES</p></strong></button>
                 </div>
                 <div class="Texto">
                     <h2 class="Negro">WE BREAK RULES <p style="color: red;">WE MAKE RULES</p></h2>
