--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             <div class="Columna2">
                 <div class="DentroImagen">
                     <img class="Join" src="/estilo/Img/join.png">
+                    <p class="JOIN">JOIN US</p>
+                    <button class="Boton3"><strong><p class="BotonC" style="color: white;">PERKS & BENEFITS</p></strong></button>
+                    <button class="Boton4"><strong><p class="BotonD" style="color: white;">OPEN POSITIONS</p></strong></button>
                 </div>
                 <div class="Texto">
                     <h2 class="Negro2">ROOM TO CREATE <p style="color: red;">ROOM TO GROW</h2></p>
@@ -78,6 +81,11 @@
         <div class="BloqueMain2">
             <div class="Col1">
                 <p class="STU">STUDIO LOCATIONS</p>
+                <img class="warsaw" src="/estilo/Img/warsaw.png">
+                <img class="warsaw" src="/estilo/Img/warsaw.png">
+                <img class="warsaw" src="/estilo/Img/warsaw.png">
+                <img class="warsaw" src="/estilo/Img/warsaw.png">
+                <img class="warsaw" src="/estilo/Img/warsaw.png">
             </div>
             <div class="Col2">
                 <p class="CON">CONTACT</p>
