--- a/index.html
+++ b/index.html
@@ -82,10 +82,25 @@
             <div class="Col1">
                 <p class="STU">STUDIO LOCATIONS</p>
                 <img class="warsaw" src="/estilo/Img/warsaw.png">
-                <img class="warsaw" src="/estilo/Img/warsaw.png">
-                <img class="warsaw" src="/estilo/Img/warsaw.png">
-                <img class="warsaw" src="/estilo/Img/warsaw.png">
-                <img class="warsaw" src="/estilo/Img/warsaw.png">
+                    <p class="war"><strong>Warsaw</strong></p>
+                    <p class="war2">ul. Jagiellońska 74</p>
+                    <p class="war3">03-301 Warszawa</p>
+                <img class="cracrow" src="/estilo/Img/cracow.png">
+                    <p class="cra"><strong>Cracow</strong></p>
+                    <p class="cra2">al. 3 Maja 9</p>
+                    <p class="cra3">30-062 Kraków</p>
+                <img class="worclaw" src="/estilo/Img/wroclaw.png">
+                    <p class="wor"><strong>Worclaw</strong></p>
+                    <p class="wor2">Quorum Office Park, Gen. Władysława Sikorskiego 26,</p>
+                    <p class="wor3">53-656 Wrocław</p>
+                <img class="vancouver" src="/estilo/Img/vancouver.png">
+                    <p class="war"><strong>Warsaw</strong></p>
+                    <p class="war2">ul. Jagiellońska 74</p>
+                    <p class="war3">03-301 Warszawa</p>
+                <img class="boston" src="/estilo/Img/boston.png">
+                    <p class="war"><strong>Warsaw</strong></p>
+                    <p class="war2">ul. Jagiellońska 74</p>
+                    <p class="war3">03-301 Warszawa</p>
             </div>
             <div class="Col2">
                 <p class="CON">CONTACT</p>
