--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
                     <p class="wor2">Quorum Office Park, Gen. Władysława Sikorskiego 26,</p>
                     <p class="wor3">53-656 Wrocław</p>
                 <img class="vancouver" src="/estilo/Img/vancouver.png">
-                    <p class="war"><strong>Warsaw</strong></p>
-                    <p class="war2">ul. Jagiellońska 74</p>
-                    <p class="war3">03-301 Warszawa</p>
+                    <p class="van"><strong>Vancouver</strong></p>
+                    <p class="van2">200 - 4190 Lougheed Highway</p>
+                    <p class="van3">Burnaby, BC, V5C 6A8</p>
                 <img class="boston" src="/estilo/Img/boston.png">
-                    <p class="war"><strong>Warsaw</strong></p>
-                    <p class="war2">ul. Jagiellońska 74</p>
-                    <p class="war3">03-301 Warszawa</p>
+                    <p class="bos"><strong>Boston</strong></p>
+                    <p class="bos2">Massachusetts</p>
             </div>
             <div class="Col2">
                 <p class="CON">CONTACT</p>
