--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <footer>
         <div class="ContenedorFooter">
-
+            <img class="logo3" src="/estilo/Img/rebels-ed247fee.svg">
         </div>
     </footer>
 </body>
