--- a/index.html
+++ b/index.html
@@ -111,7 +111,28 @@
 
     <footer>
         <div class="ContenedorFooter">
+            <div class="redes">
+                <a href="Facebook" class="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="Linkedin" class="Linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="Twitter" class="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="YouTube" class="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                <a href="Instagram" class="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="TikTok" class="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="Twitch" class="Twitch"><i class="fa-brands fa-twitch"></i></a>
+            </div>
             <img class="logo3" src="/estilo/Img/rebels-ed247fee.svg">
+            <div class="Derecha1">
+                <a href="Corporate" class="Corporate">Corporate</a>
+                <a href="User agreement" class="UserA">User agreement</a>
+                <a href="Privacy Policy" class="PrivacyP">Privacy Policy</a>
+                <a href="Cookie Policy" class="CookieP">Cookie Policy</a>
+                <a href="Store" class="Store">Store</a>
+                <a href="Forum" class="Forum">Forum</a>
+                <a href="Support" class="Support">Support</a>
+                <a href="TMF" class="TMF">TMF</a>
+                <a href="Spokko" class="Spokko">Spokko</a>
+                <a href="GOG" class="GOG">GOG</a>
+            </div>
         </div>
     </footer>
 </body>
