--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <button class="Boton2"><strong><p class="BotonB" style="color: white;">OUR GAMES</p></strong></button>
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro">WE BREAK RULES <p style="color: red;">WE MAKE RULES</p></h2>
+                    <h2 class="Negro">WE BREAK RULES <p class ="Rojo" style="color: red;">WE MAKE RULES</p></h2>
                     <p class="P1">Rebels, dreamers, professionals. Home to over a thousand ambitious individuals. CD PROJEKT RED is a video game development studio focused on storytelling ingenuity, technical innovation, and absolute quality.</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <button class="Boton4"><strong><p class="BotonD" style="color: white;">OPEN POSITIONS</p></strong></button>
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro2">ROOM TO CREATE <p style="color: red;">ROOM TO GROW</h2></p>
+                    <h2 class="Negro2">ROOM TO CREATE <p class="Rojo2" style="color: red;">ROOM TO GROW</h2></p>
                     <p class="P2">Wherever you hail from, however old you are, games have defined you and now you want to define others through games. Good. At RED, we speak many languages but share one goal: creating games that stay with you and memories that make hearts beat faster.</p>
                 </div>
             </div>
@@ -122,17 +122,19 @@
             </div>
             <img class="logo3" src="/estilo/Img/rebels-ed247fee.svg">
             <div class="Derecha1">
-                <a href="Corporate" class="Corporate">Corporate</a>
-                <a href="User agreement" class="UserA">User agreement</a>
-                <a href="Privacy Policy" class="PrivacyP">Privacy Policy</a>
-                <a href="Cookie Policy" class="CookieP">Cookie Policy</a>
-                <a href="Store" class="Store">Store</a>
-                <a href="Forum" class="Forum">Forum</a>
-                <a href="Support" class="Support">Support</a>
-                <a href="TMF" class="TMF">TMF</a>
-                <a href="Spokko" class="Spokko">Spokko</a>
-                <a href="GOG" class="GOG">GOG</a>
+                <a href="Corporate" class="Corporate"><strong>Corporate</strong></a>
+                <a href="User agreement" class="UserA"><strong>User agreement</strong></a>
+                <a href="Privacy Policy" class="PrivacyP"><strong>Privacy Policy</strong></a>
+                <a href="Cookie Policy" class="CookieP"><strong>Cookie Policy</strong></a>
+                <a href="Store" class="Store"><strong>Store</strong></a>
+                <a href="Forum" class="Forum"><strong>Forum</strong></a>
+                <a href="Support" class="Support"><strong>Support</strong></a>
+                <a href="TMF" class="TMF"><strong>TMF</strong></a>
+                <a href="Spokko" class="Spokko"><strong>Spokko</strong></a>
+                <a href="GOG" class="GOG"><strong>GOG</strong></a>
             </div>
+            <p class="Copy">© 2024 All rights reserved</p>
+            <p class="Galleta">Cookie Declaration</p>
         </div>
     </footer>
 </body>
