--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             </div>
             <div class="Col2">
                 <p class="CON">CONTACT</p>
+                <p class="Business">Business</p>
+                <a href="biz" class="biz">biz@cdprojektred.com</a>
             </div>
         </div>
     </main>
