--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <p class="CON">CONTACT</p>
                 <p class="Business">Business</p>
                 <a href="biz" class="biz">biz@cdprojektred.com</a>
+                <p class="Press">Press & Content Creators</p>
             </div>
         </div>
     </main>
