--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="Business">Business</p>
                 <a href="biz" class="biz">biz@cdprojektred.com</a>
                 <p class="Press">Press & Content Creators</p>
-                <p class="media">media</p>
+                <a href="media" class="media">media@cdprojektred.com</a>
             </div>
         </div>
     </main>
