--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 <a href="biz" class="biz">biz@cdprojektred.com</a>
                 <p class="Press">Press & Content Creators</p>
                 <a href="media" class="media">media@cdprojektred.com</a>
+                <p class="Investors">Investors</p>
+                <a href="ir" class="ir">ir</a>
             </div>
         </div>
     </main>
