--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 <p class="Press">Press & Content Creators</p>
                 <a href="media" class="media">media@cdprojektred.com</a>
                 <p class="Investors">Investors</p>
-                <a href="ir" class="ir">ir</a>
+                <a href="ir" class="ir">ir@cdprojekt.com</a>
+                <p class="Job">Job Offers</p>
+                <a href="jobs" class="jobs">jobs@cdprojektred.com</a>
             </div>
         </div>
     </main>
