"Cambio de Colores"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <button class="Boton2"><strong><p class="BotonB" style="color: white;">OUR GAMES</p></strong></button>
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro">WE BREAK RULES <p class ="Rojo" style="color: red;">WE MAKE RULES</p></h2>
+                    <h2 class="Negro">WE BREAK RULES <p class ="Rojo" style="color: #db0d15;">WE MAKE RULES</p></h2>
                     <p class="P1">Rebels, dreamers, professionals. Home to over a thousand ambitious individuals. CD PROJEKT RED is a video game development studio focused on storytelling ingenuity, technical innovation, and absolute quality.</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <button class="Boton4"><strong><p class="BotonD" style="color: white;">OPEN POSITIONS</p></strong></button>
                 </div>
                 <div class="Texto">
-                    <h2 class="Negro2">ROOM TO CREATE <p class="Rojo2" style="color: red;">ROOM TO GROW</h2></p>
+                    <h2 class="Negro2">ROOM TO CREATE <p class="Rojo2" style="color: #db0d15;">ROOM TO GROW</h2></p>
                     <p class="P2">Wherever you hail from, however old you are, games have defined you and now you want to define others through games. Good. At RED, we speak many languages but share one goal: creating games that stay with you and memories that make hearts beat faster.</p>
                 </div>
             </div>
@@ -111,6 +111,7 @@
                 <a href="ir" class="ir">ir@cdprojekt.com</a>
                 <p class="Job">Job Offers</p>
                 <a href="jobs" class="jobs">jobs@cdprojektred.com</a>
+                <button class="ultimo">VISIT OUR PRESS CENTER</button>
             </div>
         </div>
     </main>
