--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <a href="ir" class="ir">ir@cdprojekt.com</a>
                 <p class="Job">Job Offers</p>
                 <a href="jobs" class="jobs">jobs@cdprojektred.com</a>
-                <button class="ultimo">VISIT OUR PRESS CENTER</button>
+                <button style="color: white;" class="ultimo">VISIT OUR PRESS CENTER</button>
             </div>
         </div>
     </main>
